welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
	if ( (90 <= Math.abs(n) <= 110) || (190 <= Math.abs(n) <= 210) ) {return true}
                                   ^