welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if ( (90 <= Math.abs(n) <= 110) || (190 <= Math.abs(n) <= 210) ) {return true}
	else {return false}
}

// Étant donné deux nombres entiers, retourner vrai si et seulement 
// si la valeur est à moins de 10 de la valeur 100 ou de la valeur 200. 
//Remarquez que Math.abs(n) retourne la valeur absolue d'un nombre.